chatbox width scrollbar fix

--- a/plugins/game/style.css
+++ b/plugins/game/style.css
@@ -343,6 +343,7 @@ a:hover {
   text-align:right;
   overflow:auto;
   padding-bottom:20px;
+  word-wrap:break-word;
 }
 
 #chatContent .jspVerticalBar {
